- working on debugging multi-layer anns

--- a/src/neural_networks/Makefile
+++ b/src/neural_networks/Makefile
@@ -1,2 +1,3 @@
 test:
-	cd t/heavy_testing; mit-scheme --load matrix_test.scm
+#	cd t/heavy_testing; mit-scheme --load matrix_test.scm
+	cd t/; mit-scheme --load multi_layer_test.scm
