- added a new test target to src/neural_networks/Makefile

--- a/src/neural_networks/Makefile
+++ b/src/neural_networks/Makefile
@@ -1,3 +1,4 @@
 test:
-#	cd t/heavy_testing; mit-scheme --load matrix_test.scm
 	cd t/; mit-scheme --load multi_layer_test.scm
+iris:
+	cd t/heavy_testing; mit-scheme --load matrix_test.scm
